Starting to document the client installation process

--- a/myst.yml
+++ b/myst.yml
@@ -31,6 +31,7 @@ project:
     - file: root.md
     - file: Installation.md
     - file: install_client.md
+    - file: install_video.md
     - title: Modules
       children:
         - file: modules/reward.md
